2006-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.18 released.

        * Added ability to call custom subroutine to create Text Items
          and customized Banners. When using sub menus, previous selections
          from parent menus are available for use in dynamically constructing
          the current menu. Documentation was updated to explain this new
          feature

        * Also, sub-menus now seem to work fairly reliably - so the caveat
          against their aggressive use has been removed from the documentation

2006-08-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.17 released.

        * Fixed sub menus when the ]Convey[ macro is not set

2006-07-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.16 released.

        * Fixed even more inconsistent behavior between 'One' and 'Many'
          Selection setting when using sub-menus on one or more items

2006-07-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.15 released.

        * Fixed more inconsistent behavior between 'One' and 'Many' Selection
          setting when using sub-menus on one or more items

2006-07-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.14 released.

        * Fixed clear for ActiveState perl

        * Fixed inconsistent behavior between 'One' and 'Many' Selection
          setting when using sub-menus on one or more items

2006-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.13 released.

        * Version 1.12 distribution was broken due to improperly wrapped lines

2006-06-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.12 released.

	* Added Support for unreleased FullAuto utility

	* Fixed "my" scoping bug for $cnt variable

2005-08-12  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.11 released.
