@@ -14,19 +14,19 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 eddb7047c79938e9a1ff11cd6df7e4c52a680661 Build.PL
-SHA1 3ed751efedfab87d5e9f82cd37b1c06846527594 ChangeLog
+SHA1 8495412ef77c6c2310886f7542c0ac49ea44fe84 Build.PL
+SHA1 426c9f99e1b86a38152ffc05d415bd90133007cd ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 b60e58dabe06df867326f357a6d73f197d15daab MANIFEST
-SHA1 86181a3f95f47a759fc006560decff8b83f1dc28 META.yml
-SHA1 f66acde86158aa6f0acaea3454b97faeedd21d74 Makefile.PL
+SHA1 f9fda14747a7816906a339c4e9c5dbe77ae2719a META.yml
+SHA1 4b1504a2ed98965623514b3ecf7cd94f8403c9da Makefile.PL
 SHA1 0a0552a52ec646651bdd54e636410613978c04db README
-SHA1 bbdac1cb652911b7bb5eae992308274fa2dd313c lib/Term/Menus.pm
+SHA1 23a2c4114b48515161524e37759db7baac61cdc8 lib/Term/Menus.pm
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.1 (Cygwin)
 
-iD8DBQFE70L3m9P/2BC89ZsRArFsAJ93JN/fgrf+Y9M2eTAtHe44BgrlUQCgiXJZ
-SOu6jn2nBkpa7Ukqn2GL87Q=
-=6JZx
+iD8DBQFE8vIQm9P/2BC89ZsRAqEjAJ4qOlbjKgNWMb4TfG7eLLapb2cdOQCdGsBE
+o+6dhz/fUBNRTNwyqlOOt74=
+=kVUp
 -----END PGP SIGNATURE-----
