@@ -1,3 +1,9 @@
+2006-08-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.19 released.
+
+        * No Changes to Term::Menus - Repaired CPAN distribution
+
 2006-08-25  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 1.18 released.
